[package]
name = "shoes"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A multi-protocol proxy server."
homepage = "https://github.com/cfal/shoes/"
repository = "https://github.com/cfal/shoes/"
readme = "README.md"
keywords = ["proxy", "proxy-server", "shadowsocks", "v2ray", "vmess"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
aes = "0.7.5"
argon2 = "0.4.1"
async-trait = "0.1.58"
base64 = "0.13.1"
blake3 = "1.3.1"
cfb-mode = "0.7.1"
digest = "0.10.5"
env_logger = "0.9.3"
futures = "0.3.25"
generic-array = "0.14.6"
hmac = "0.12.1"
log = "0.4.17"
md-5 = "0.10.5"
memchr = "2.5.0"
notify = "5.0.0-pre.15"
once_cell = "1.16.0"
parking_lot = "0.12.1"
percent-encoding = "2.2.0"
quinn = "0.9.0"
rand = "0.8.5"
ring = "0.16.20"
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
rustls-pemfile = { version = "1.0.1" }
sha1 = "0.6.0"
sha2 = "0.10.6"
sha3 = "0.10.6"
serde = { version = "1.0.147", features = ["derive", "std"] }
serde_yaml = "0.9.14"
tokio = { version = "1.21.2", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
url = "2.3.1"
webpki-roots = { version = "0.22.5" }

[profile.release]
opt-level = 3
lto = "fat"
